--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.quickSuggestions": false,
-    "editor.suggestOnTriggerCharacters": false,
+    "editor.suggestOnTriggerCharacters": true,
     "editor.suggest.showWords": false,
     "editor.suggest.showMethods": false,
     "editor.suggest.showFunctions": false,
