--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,9 @@
     "@fullcalendar/vue3": "^6.1.19",
     "firebase": "^12.3.0",
     "vue": "^3.5.21",
-    "vue-cal": "^4.10.2"
+    "vue-cal": "^4.10.2",
+    "vue-installer": "^0.0.6",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
